css/style-dark.css
/* ... */
.mry-slider-arrows .mry-label {
	margin-right: 20px;
	color: #e1e1e1;
}

.mry-slider-arrows .mry-button-next, .mry-slider-arrows .mry-button-prev {
	width: 60px;
	cursor: pointer;
}

.mry-slider-arrows .mry-button-next span, .mry-slider-arrows .mry-button-prev span {
	display: block;
	width: 20px;
	height: 20px;
	text-align: center;
}

.mry-slider-arrows .mry-button-next span i, .mry-slider-arrows .mry-button-prev span i {
	font-size: 20px;
	width: 20px;
	height: 20px;
	color: #e1e1e1;
}

/* Slider Navigation after 768px */

@media (max-width: 768px) {
	.mry-slider-pagination-frame, .mry-slider-progress-bar-frame {
		display: none;
	}
	.mry-slider-arrows {
		padding: 0 20px;
	}
	.mry-slider-arrows .mry-label {
		display: none;
	}
}

/* Slider Navigation after 590px */

@media (max-width: 590px) {
	.mry-slider-nav-panel {
		height: 80px;
	}
	.mry-slider-pagination-frame, .mry-slider-progress-bar-frame {
		display: none;
	}
	.mry-slider-arrows {
		background-color: transparent !important;
		padding: 0;
		justify-content: flex-start;
		left: 20px;
	}
	.mry-slider-arrows .mry-label {
		display: none;
	}
	.mry-slider-arrows .mry-button-next, .mry-slider-arrows .mry-button-prev {
		height: 80px;
	}
	.mry-project-slider-item .mry-main-title {
		padding-bottom: 80px !important;
	}
}

/* parallax horizantal image */
.banner-container {
	position: fixed;
	overflow: hidden;
	margin-top: 0%;
	left: 0px;
    height: 338px;
    width: 8000px;
	z-index: 9999;
	pointer-events: none;
	background-image: url(/img/dark/projects/prjct-1/Page-parallax.png);
	background-repeat: repeat-x;
	background-size: 4143px 263px;
	background-position: 0px 50% ;
	animation: move-banner 120s linear 0s infinite reverse none running;
	max-height: 590px;
	transform: rotate(-2deg);
	display: flex;
	-webkit-box-pack: justify;
	justify-content: space-between;
	width: 100%;
	flex-direction: column;
	}

  
  @keyframes move-banner {
	0% {
	  background-position: 50% 50%;
	}
	100% {
	  background-position: 150% 50%;
	}
}

.banner-containerh {
	position: fixed;
	overflow: hidden;
	margin-top: -20%;
	left: 0px;
    height: 338px;
    width: 8000px;
	z-index: 9999;
	pointer-events: none;
	background-image: url(/img/dark/projects/prjct-1/Page-parallax.png);
	background-repeat: repeat-x;
	background-size: 4143px 263px;
	animation: move-banner 120s linear 0s infinite normal none running;
	max-height: 590px;
	transform: rotate(-2deg);
	display: flex;
	-webkit-box-pack: justify;
	justify-content: space-between;
	width: 100%;
	flex-direction: column;
	}

  
  @keyframes move-banner-h {
	0% {
	  background-position: 10% 50%;
	}
	100% {
	  background-position: 110% 50%;
	}
}
  
/*   
  parallax horizantal image
.banner-containerh {
	position: fixed;
	top: 0;
	left: 0;
	width: 100vw;
	height: 100vh;
	z-index: 9999;
	pointer-events: none;
  }
  
  .banner-containerh img {
	position: relative;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%) rotate(-45deg);
	max-width: none;
	max-height: none; */
	/* animation: move-banner 20s linear infinite alternate; */
	/* animation: move-banner 10s linear 0s infinite normal none running;
  }
  
  @keyframes move-banner {
	0% {
	  transform: translate(-50%, -50%) rotate(-25deg) translateX(150%);
	}
	100% {
	  transform: translate(-50%, -50%) rotate(-25deg) translateX(-150%);
	}
  } */
/* Scroll Hint */

.mry-scroll-hint-frame {
	display: flex;
	justify-content: center;
	flex-direction: column;
}

.mry-scroll-hint-frame .mry-label {
	width: 100%;
	text-align: center;
	color: #e1e1e1;
}

.mry-scroll-hint-frame .mry-scroll-hint {
	margin-left: auto;
	margin-right: auto;
	display: flex;
	justify-content: center;
	align-items: center;
	height: 100px;
	width: 100px;
}

.mry-scroll-hint-frame .mry-scroll-hint span {
	display: block;
	position: relative;
	width: 22px;
	height: 35px;
	border-radius: 15px;
	border: solid 2px #e1e1e1;
}

.mry-scroll-hint-frame .mry-scroll-hint span:after {
	content: '';
	width: 3px;
	height: 3px;
	background-color: #e1e1e1;
	border-radius: 50%;
	position: absolute;
	top: 10px;
	left: 45%;
	animation: mouse 1s ease-in-out infinite;
}

@keyframes mouse {
	0% {
		transform: translateY(0);
	}
	50% {
		transform: translateY(5px);
	}
	100% {
		transform: translateY(0);
	}
}

/* Slider Arrows */

.mry-arrows {
	display: flex;
	justify-content: center;
	flex-direction: column;
}

.mry-arrows .mry-sl-nav {
	margin-left: auto;
	margin-right: auto;
}

.mry-arrows .mry-sl-nav .mry-next, .mry-arrows .mry-sl-nav .mry-prev {
	cursor: pointer;
	transition: 0.3s;
	width: 60px;
	color: #e6e6e6;
}

.mry-arrows .mry-sl-nav .mry-next.swiper-button-disabled, .mry-arrows .mry-sl-nav .mry-prev.swiper-button-disabled {
	opacity: 0.3;
	pointer-events: none;
}

.mry-arrows .mry-label {
	color: rgba(215, 215, 215, 0.8);
}

/* Video */

.mry-about-video .mry-video-cover-frame {
	position: relative;
	overflow: hidden;
	padding-bottom: 40%;
	margin-top: -5%;
	margin-left: -15%;

}

.mry-about-video .mry-video-cover-frame .mry-video-cover {
	position: absolute;
	width: 98%;
	height: 95%;
	object-fit: contain;
	object-position: bottom;
	border-radius: 10% !important;

}

.mry-about-video .mry-video-cover-frame .mry-cover-overlay {
	position: absolute;
	z-index: 2;
	top: 0;
	right: 0;
	background-color: rgba(20, 20, 20, 0.45);
	width: 100%;
	height: 100%;
	
	
}

.mry-about-video .mry-video-cover-frame .mry-play-button {
	display: flex;
	justify-content: center;
	align-items: center;
	width: 80px;
	height: 80px;
	position: absolute;
	z-index: 2;
	top: 50%;
	left: 50%;
	margin-left: -40px;
	margin-top: -40px;
	border: solid 2px #e1e1e1;
	border-radius: 50%;
	box-shadow: inset 0 0 40px rgba(13, 13, 13, 0.5), 0 0 40px rgba(13, 13, 13, 0.5);
}

.mry-about-video .mry-video-cover-frame .mry-play-button a {
	display: flex;
	justify-content: center;
	align-items: center;
	height: 30px;
	width: 30px;
}
/* ... */

